--- a/enhancer_classifier_project_env.yml
+++ b/enhancer_classifier_project_env.yml
@@ -1,22 +1,53 @@
 name: enhancer_classifier_project
 channels:
   - pytorch
+  - bioconda
+  - conda-forge
   - defaults
 dependencies:
+  - appnope=0.1.2=py37hf985489_1
+  - argon2-cffi=20.1.0=py37h271585c_2
+  - async_generator=1.10=py_0
+  - attrs=21.2.0=pyhd8ed1ab_0
+  - backcall=0.2.0=pyh9f0ad1d_0
+  - backports=1.0=py_2
+  - backports.functools_lru_cache=1.6.4=pyhd8ed1ab_0
   - blas=1.0=mkl
+  - bleach=3.3.1=pyhd8ed1ab_0
   - bzip2=1.0.8=h1de35cc_0
-  - ca-certificates=2021.7.5=hecd8cb5_1
-  - certifi=2021.5.30=py37hecd8cb5_0
+  - ca-certificates=2021.5.30=h033912b_0
+  - certifi=2021.5.30=py37hf985489_0
+  - cffi=1.14.6=py37hda351d9_0
   - cycler=0.10.0=py37_0
+  - dbus=1.13.6=h2f22bb5_0
+  - decorator=5.0.9=pyhd8ed1ab_0
+  - defusedxml=0.7.1=pyhd8ed1ab_0
+  - entrypoints=0.3=pyhd8ed1ab_1003
+  - expat=2.4.1=h23ab428_2
   - ffmpeg=4.3=h0a44026_0
   - freetype=2.10.4=ha233b18_0
   - gettext=0.21.0=h7535e17_0
+  - glib=2.69.0=hdf23fa2_0
   - gmp=6.2.1=h23ab428_2
   - gnutls=3.6.15=hed9c0bf_0
   - icu=58.2=h0a44026_3
+  - importlib-metadata=4.6.1=py37hf985489_0
   - intel-openmp=2021.2.0=hecd8cb5_564
+  - ipykernel=5.5.5=py37h85f7c60_0
+  - ipython=7.25.0=py37h85f7c60_1
+  - ipython_genutils=0.2.0=py_1
+  - ipywidgets=7.6.3=pyhd3deb0d_0
+  - jedi=0.18.0=py37hf985489_2
+  - jinja2=3.0.1=pyhd8ed1ab_0
   - joblib=1.0.1=pyhd3eb1b0_0
   - jpeg=9b=he5867d9_2
+  - jsonschema=3.2.0=pyhd8ed1ab_3
+  - jupyter=1.0.0=py37hf985489_6
+  - jupyter_client=6.1.12=pyhd8ed1ab_0
+  - jupyter_console=6.4.0=pyhd8ed1ab_0
+  - jupyter_core=4.7.1=py37hf985489_0
+  - jupyterlab_pygments=0.1.2=pyh9f0ad1d_0
+  - jupyterlab_widgets=1.0.0=pyhd8ed1ab_1
   - kiwisolver=1.3.1=py37h23ab428_0
   - lame=3.100=h1de35cc_0
   - lcms2=2.12=hf1fd2bf_0
@@ -26,6 +57,7 @@ dependencies:
   - libiconv=1.16=h1de35cc_0
   - libidn2=2.3.1=h9ed2024_0
   - libpng=1.6.37=ha441bb4_0
+  - libsodium=1.0.18=hbcb3906_1
   - libtasn1=4.16.0=h9ed2024_0
   - libtiff=4.2.0=h87d7836_0
   - libunistring=0.9.10=h9ed2024_0
@@ -34,42 +66,86 @@ dependencies:
   - libxml2=2.9.12=hcdb78fc_0
   - llvm-openmp=10.0.0=h28b9765_0
   - lz4-c=1.9.3=h23ab428_0
+  - markupsafe=2.0.1=py37h271585c_0
   - matplotlib=3.3.4=py37hecd8cb5_0
   - matplotlib-base=3.3.4=py37h8b3ea08_0
+  - matplotlib-inline=0.1.2=pyhd8ed1ab_2
+  - mistune=0.8.4=py37h271585c_1004
   - mkl=2021.2.0=hecd8cb5_269
   - mkl-service=2.4.0=py37h9ed2024_0
   - mkl_fft=1.3.0=py37h4a7008c_2
   - mkl_random=1.2.1=py37hb2f4e1b_2
+  - nb_conda=2.2.1=py37hf985489_4
+  - nb_conda_kernels=2.3.1=py37hf985489_0
+  - nbclient=0.5.3=pyhd8ed1ab_0
+  - nbconvert=6.1.0=py37hf985489_0
+  - nbformat=5.1.3=pyhd8ed1ab_0
   - ncurses=6.2=h0a44026_1
+  - nest-asyncio=1.5.1=pyhd8ed1ab_0
   - nettle=3.7.3=h230ac6f_1
   - ninja=1.10.2=hf7b0b51_1
+  - notebook=6.4.0=pyha770c72_0
   - numpy=1.20.2=py37h4b4dc7a_0
   - numpy-base=1.20.2=py37he0bd621_0
   - olefile=0.46=py37_0
   - openh264=2.1.0=hd9629dc_0
   - openjpeg=2.3.0=hb95cd4c_1
-  - openssl=1.1.1k=h9ed2024_0
+  - openssl=1.1.1k=h0d85af4_0
+  - packaging=21.0=pyhd8ed1ab_0
   - pandas=1.2.5=py37h23ab428_0
+  - pandoc=2.14.0.3=h0d85af4_0
+  - pandocfilters=1.4.2=py_1
+  - parso=0.8.2=pyhd8ed1ab_0
+  - pcre=8.45=h23ab428_0
+  - pexpect=4.8.0=pyh9f0ad1d_2
+  - pickleshare=0.7.5=py_1003
   - pillow=8.3.1=py37ha4cf6ea_0
   - pip=21.1.3=py37hecd8cb5_0
+  - prometheus_client=0.11.0=pyhd8ed1ab_0
+  - prompt-toolkit=3.0.19=pyha770c72_0
+  - prompt_toolkit=3.0.19=hd8ed1ab_0
+  - ptyprocess=0.7.0=pyhd3deb0d_0
+  - pycparser=2.20=pyh9f0ad1d_2
+  - pygments=2.9.0=pyhd8ed1ab_0
   - pyparsing=2.4.7=pyhd3eb1b0_0
+  - pyqt=5.9.2=py37h2a560b1_4
+  - pyrsistent=0.17.3=py37h271585c_2
   - python=3.7.10=h88f2d9e_0
   - python-dateutil=2.8.1=pyhd3eb1b0_0
+  - python_abi=3.7=2_cp37m
   - pytorch=1.9.0=py3.7_0
   - pytz=2021.1=pyhd3eb1b0_0
+  - pyzmq=20.0.0=py37h23ab428_1
+  - qt=5.9.7=h468cd18_1
+  - qtconsole=5.1.1=pyhd8ed1ab_0
+  - qtpy=1.9.0=py_0
   - readline=8.1=h9ed2024_0
   - scikit-learn=0.24.2=py37hb2f4e1b_0
   - scipy=1.6.2=py37hd5f7400_1
+  - send2trash=1.7.1=pyhd8ed1ab_0
   - setuptools=52.0.0=py37hecd8cb5_0
+  - sip=4.19.8=py37h0a44026_0
   - six=1.16.0=pyhd3eb1b0_0
   - sqlite=3.36.0=hce871da_0
+  - terminado=0.10.1=py37hf985489_0
+  - testpath=0.5.0=pyhd8ed1ab_0
   - threadpoolctl=2.2.0=pyhb85f177_0
   - tk=8.6.10=hb0a8c7a_0
   - torchvision=0.10.0=py37_cpu
   - tornado=6.1=py37h9ed2024_0
+  - traitlets=5.0.5=py_0
   - typing_extensions=3.10.0.0=pyh06a4308_0
+  - wcwidth=0.2.5=pyh9f0ad1d_2
+  - webencodings=0.5.1=py_1
   - wheel=0.36.2=pyhd3eb1b0_0
+  - widgetsnbextension=3.5.1=py37hf985489_4
   - xz=5.2.5=h1de35cc_0
+  - zeromq=4.3.4=h23ab428_0
+  - zipp=3.5.0=pyhd8ed1ab_0
   - zlib=1.2.11=h1de35cc_3
   - zstd=1.4.9=h322a384_0
+  - pip:
+    - install==1.3.4
+    - ipynb==0.5.1
+    - sklearn==0.0
 prefix: /Users/reasterlin/opt/miniconda3/envs/enhancer_classifier_project
